; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/arm/display/komeda/d71/extr_d71_dev.c_d71_format_mod_supported.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/arm/display/komeda/d71/extr_d71_dev.c_d71_format_mod_supported.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.komeda_format_caps = type { i32 }

@AFBC_FORMAT_MOD_BLOCK_SIZE_MASK = common dso_local global i64 0, align 8
@AFBC_FORMAT_MOD_BLOCK_SIZE_32x8 = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [40 x i8] c"D71 doesn't support ROT90 for WB-AFBC.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.komeda_format_caps*, i32, i64, i32)* @d71_format_mod_supported to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @d71_format_mod_supported(%struct.komeda_format_caps* %0, i32 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.komeda_format_caps*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store %struct.komeda_format_caps* %0, %struct.komeda_format_caps** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i64, i64* %8, align 8
  %12 = load i64, i64* @AFBC_FORMAT_MOD_BLOCK_SIZE_MASK, align 8
  %13 = and i64 %11, %12
  store i64 %13, i64* %10, align 8
  %14 = load i64, i64* %10, align 8
  %15 = load i64, i64* @AFBC_FORMAT_MOD_BLOCK_SIZE_32x8, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %4
  %18 = load i32, i32* %9, align 4
  %19 = call i64 @drm_rotation_90_or_270(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = call i32 @DRM_DEBUG_ATOMIC(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %5, align 4
  br label %24

23:                                               ; preds = %17, %4
  store i32 1, i32* %5, align 4
  br label %24

24:                                               ; preds = %23, %21
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i64 @drm_rotation_90_or_270(i32) #1

declare dso_local i32 @DRM_DEBUG_ATOMIC(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
